--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.97.0",
     "autoprefixer": "^10.4.24",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "postcss": "^8.5.6",
     "react": "19.2.3",
